# MVCApi.Application/Queries/GetOrderById.cs
@@ -12,23 +12,30 @@ namespace MVCApi.Application.Queries
     public class GetOrderById : IRequest<OrderDto>
     {
         public Guid OrderId { get; init; }
+        public string CurrencyCode { get; init; }
 
         public class Handler : IRequestHandler<GetOrderById, OrderDto>
         {
             private readonly IMapper _mapper;
             private readonly IDomainRepository<Order> _orderRepository;
+            private readonly ICurrencyService _currencyService;
 
-            public Handler(IDomainRepository<Order> orderRepository, IMapper mapper)
+            public Handler(IDomainRepository<Order> orderRepository, IMapper mapper, ICurrencyService currencyService)
             {
                 _orderRepository = orderRepository;
                 _mapper = mapper;
+                _currencyService = currencyService;
             }
 
             public async Task<OrderDto> Handle(GetOrderById request, CancellationToken cancellationToken)
             {
                 var order = await _orderRepository.GetByIdAsync(request.OrderId);
 
-                return _mapper.Map<Order, OrderDto>(order);
+                return _mapper.Map<Order, OrderDto>(order, opt =>
+                {
+                    opt.Items["currencyCode"] = request.CurrencyCode;
+                    opt.Items["currencyService"] = _currencyService;
+                });
             }
         }
     }
